added web app, server and linked w/ m5 stack
